--- a/the-basics-of-python-pandas-part-1.ipynb
+++ b/the-basics-of-python-pandas-part-1.ipynb
@@ -1055,7 +1055,7 @@
     }
    ],
    "source": [
-    "#To view the dataset in your workspace, we can simple call the name of the variable or use the print function\n",
+    "#To view the dataset in your workspace, we can simply call the name of the variable or use the print function\n",
     "\n",
     "realEstTrans"
    ]
